# file-uploader

./: .env.example  .gitignore  Dockerfile  README.md  adls_utils.py  config.toml  helper_functions.py  main_app.py  pyproject.toml  requirements.txt
FileUploaderDBT/: dbt_project.yml  packages.yml
FileUploaderDBT/macros/: accepted_values_case_insensitive.sql
FileUploaderDBT/models/validation/: budgetfinance.yml  budgetsales.yml  campaigns_so99.yml  cogs_lu_australia.yml  cogs_lu_hungary.yml  costallocationrates.yml  customer_master_data.yml  demo_costallocationrates.yml  demo_hcp_contacts.yml  end_customer.yml  icp.yml  item_master_data.yml  local_qv_customer_mapping.yml  local_qv_item_mapping.yml  local_qv_mapping.yml  pharmamar_kols.yml  vendorgrouping.yml
FileUploaderDBT/tests/generic/: no_leading_or_trailing_spaces.sql  no_less_than.sql
samples/: DataPlatform_CostCenter_DK02_FC24.csv  DataPlatform_CostCenter_DK02_FC24_bad.csv  ProfitabilityManagement_UploadExampleFile_022024_bad_col_name.xlsx  ProfitabilityManagement_UploadExampleFile_022024_bad_col_type.xlsx  ProfitabilityManagement_UploadExampleFile_022024_good.xlsx  budgetfinance_bad.csv  budgetfinance_bad_dbt.csv  budgetfinance_good.xls  budgetfinance_good.xlsx  budgetsales_bad.csv  budgetsales_good.csv  cogs_lu_australia_bad.csv  cogs_lu_australia_good.csv  cogs_lu_hungary_bad.csv  cogs_lu_hungary_good.csv  costallocationrates_bad.xlsx  costallocationrates_good.xlsx  customer_master_data_bad.csv  customer_master_data_good.csv  demo_hcp_contacts.csv  demo_hcp_contacts_bed.csv  end_customer_bad.csv  end_customer_good.csv  icp_bad.csv  item_master_data_bad.xlsx  item_master_data_good.xlsx  local_qv_customer_mapping_bad_column_name.xlsx  local_qv_customer_mapping_bad_value.xlsx  local_qv_customer_mapping_good.xlsx  local_qv_item_mapping_bad_column.xlsx  local_qv_item_mapping_bad_value.xlsx  local_qv_item_mapping_good.xlsx  vendor_grouping_bad.csv  vendor_grouping_bad_column_name.csv  vendor_grouping_good.csv
templates/: budgetfinance.csv  budgetfinance.xlsx  budgetsales.csv  budgetsales.xlsx  cogs_lu_australia.csv  cogs_lu_australia.xlsx  cogs_lu_hungary.csv  cogs_lu_hungary.xlsx  costallocationrates.csv  costallocationrates.xlsx  customer_master_data.csv  customer_master_data.xlsx  demo_hcp_contacts.csv  end_customer.xlsx  icp.csv  icp.xlsx  item_master_data.csv  item_master_data.xlsx  local_qv_customer_mapping.csv  local_qv_item_mapping.csv  vendorgrouping.csv  vendorgrouping.xlsx
