[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-uploader"
version = "1.13.0"
description = "Streamlit app for validating and uploading CSV/XLSX reports to Azure Data Lake Gen2." # Optional
readme = "README.md" # Specifies the README file as the long description
authors = [
  { name="Marko Avramović", email="marko2212@gmail.com" },
]
license = { text="MIT" }
requires-python = ">=3.9" # Specify the Python version you use/require

keywords = ["streamlit", "azure", "data-lake", "dbt", "duckdb", "pyarrow", "file-upload"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta"
]

[project.urls]
Homepage = "https://github.com/marko2212/file-uploader"
Repository = "https://github.com/marko2212/file-uploader"
Issues = "https://github.com/marko2212/file-uploader/issues" # Optional issue tracker link

# ==============================
# Tool Configuration
# ==============================

# Your existing ruff configuration goes below this
[tool.ruff]
# Select the rule codes to enable. See Ruff documentation for details.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (e.g., unused imports/variables, undefined names)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (potential bugs)
    "UP",  # pyupgrade (upgrade syntax to newer Python versions)
    "A",   # flake8-builtins (detect shadowing of builtins)
    "SIM", # flake8-simplify (suggest code simplifications)
    "C4",  # flake8-comprehensions (encourage comprehensions)
    "ANN", # flake8-annotations (check for missing type annotations)
    # Consider enabling these too:
    # "D",  # pydocstyle (if you want docstring checks)
    # "S",  # flake8-bandit (for security checks)
]

# Optional: Ignore specific rules if they annoy you
# ignore = ["E501"]  # Example: Ignore line too long error

# Optional: Set your preferred line length (Ruff defaults to 88)
line-length = 88

# Optional: Specify directories Ruff should ignore
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "archive",
]

[tool.ruff.format]
# You can add formatting-specific settings here if you don't want the defaults
# E.g., quote-style = "double"
